<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ShipmentsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/select_a_driver"
        android:textAlignment="center"
        android:textSize="20sp"
        android:paddingVertical="6dp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/driversRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/emptyDrivers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/no_drivers_available"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingVertical="6dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/select_a_shipment_destination"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shipmentsRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/emptyShipments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/no_shipments_to_display"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/listBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/check_assignments"
            android:textColor="@color/purple_500"
            android:background="@drawable/rounded_border_purple" />
        <Button
            android:id="@+id/saveBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/assign_shipment"
            android:background="@drawable/rounded_border_fill_purple"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</LinearLayout>