<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.AssignedShipmentsFragment"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:textAlignment="center"
        android:paddingVertical="6dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/assigned_shipments" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shipmentsRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="4dp"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        />

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/no_shipments_to_display"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_border_fill_purple"
        />


</LinearLayout>