<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/rounded_border_green"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Table Rows -->
        <TableRow>
            <TextView
                android:text="@string/id"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/commonIdTV"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/driver"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/driverNameTV"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/address"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              />

            <TextView
                android:id="@+id/commonAddressTV"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>



        <TableRow>
            <TextView
                android:text="@string/date"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/dateTv"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>

</LinearLayout>