<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemShipment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/rounded_border_green"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/commonIdTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/commonAddressTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow android:id="@+id/scoreRow">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/scoreTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

</LinearLayout>